# s3_file_uploader

./: .gitignore  .pre-commit-config.yaml  CODE_QUALITY_STANDARDS.md  README.md  customer-compliance-check.sh  ide_setup.sh  pyproject.toml  requirements-dev.txt  s3_file_uploader.py  setup.cfg
.github/workflows/: code-quality.yml  security.yml  tests.yml
tests/: __init__.py  test_main.py
